--- a/www/package.json
+++ b/www/package.json
@@ -10,6 +10,8 @@
     "@polymer/polymer": "LasaleFamine/polymer#3.0-preview"
   },
   "devDependencies": {
+    "css-loader": "^0.28.7",
+    "style-loader": "^0.19.0",
     "text-loader": "0.0.1",
     "webpack": "3.5.5",
     "webpack-dev-server": "2.7.1"
